<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/tv_labellat"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/lat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_lat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/_0_00"
            app:layout_constraintStart_toEndOf="@+id/tv_labellat"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_labellon"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/lon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_labellat" />

        <TextView
            android:id="@+id/tv_lon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/_0_00"
            app:layout_constraintStart_toEndOf="@+id/tv_labellon"
            app:layout_constraintTop_toBottomOf="@+id/tv_lat" />

        <TextView
            android:id="@+id/tv_labelaltitude"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/altitude"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_labellon" />

        <TextView
            android:id="@+id/tv_altitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0_00"
            app:layout_constraintStart_toEndOf="@+id/tv_labelaltitude"
            app:layout_constraintTop_toTopOf="@+id/tv_labelaltitude" />

        <TextView
            android:id="@+id/tv_labelaccuracy"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/accuracy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_labelaltitude" />

        <TextView
            android:id="@+id/tv_accuracy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0_00"
            app:layout_constraintStart_toEndOf="@+id/tv_labelaccuracy"
            app:layout_constraintTop_toTopOf="@+id/tv_labelaccuracy" />

        <TextView
            android:id="@+id/tv_labelsensor"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sensor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sw_gps" />

        <TextView
            android:id="@+id/tv_sensor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cell_tower_wifi"
            app:layout_constraintStart_toEndOf="@+id/tv_labelsensor"
            app:layout_constraintTop_toTopOf="@+id/tv_labelsensor" />

        <TextView
            android:id="@+id/tv_labelupdates"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/updates"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sw_locationsupdates" />

        <TextView
            android:id="@+id/tv_updates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/off"
            app:layout_constraintStart_toEndOf="@+id/tv_labelupdates"
            app:layout_constraintTop_toTopOf="@+id/tv_labelupdates" />

        <Switch
            android:id="@+id/sw_locationsupdates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:checked="true"
            android:minHeight="48dp"
            android:text="@string/location_updates"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <Switch
            android:id="@+id/sw_gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:minHeight="48dp"
            android:text="@string/gps_savepower"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_labelupdates" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/tv_lbladdress"
            app:layout_constraintTop_toTopOf="@+id/tv_lbladdress" />

        <TextView
            android:id="@+id/tv_lbladdress"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_accuracy" />

        <View
            android:id="@+id/divider"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="395dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_address" />

        <TextView
            android:id="@+id/tv_labelCrumpCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/waypoints"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_labelsensor" />

        <TextView
            android:id="@+id/tv_countOfCrumbs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            app:layout_constraintStart_toEndOf="@+id/tv_labelCrumpCounter"
            app:layout_constraintTop_toTopOf="@+id/tv_labelCrumpCounter" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/xray"
            android:textColor="#FFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_labelCrumpCounter" />



        <Button
            android:id="@+id/firebase_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/i_m_infected"
            android:textColor="#FFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.03"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_labelCrumpCounter" />

        <Button
            android:id="@+id/firebase_test_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/i_m_healthy"
            android:textColor="#FFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.308"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firebase_test" />

        <Button
            android:id="@+id/map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/show_other_infected"
            android:textColor="#FFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firebase_test_1" />

        <Button
            android:id="@+id/help"
            android:layout_width="110dp"
            android:layout_height="47dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/guide"
            android:textColor="#FFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.795"
            app:layout_constraintStart_toEndOf="@+id/firebase_test_1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.79" />

        <Button
            android:id="@+id/startButton"
            android:layout_width="108dp"
            android:layout_height="47dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="Survey"
            android:textColor="#FFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.278"
            app:layout_constraintStart_toEndOf="@+id/firebase_test_1"
            app:layout_constraintTop_toBottomOf="@+id/help"
            app:layout_constraintVertical_bias="0.225" />

        <Button
            android:id="@+id/logoutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="285dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="23dp"
            android:layout_marginBottom="557dp"
            android:onClick="logout1"
            android:text="@string/logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
